--- a/battle.html
+++ b/battle.html
@@ -3312,23 +3312,26 @@ function showDiscardedCardDetails(entry) {
     }
   }
   function showTutorialIfNeeded() {
-  const hasSeenTutorial = localStorage.getItem('toadBattle_tutorialSeen');
   const overlay = document.getElementById('tutorialOverlay');
+  if(!overlay) return;
   
-  if(!hasSeenTutorial && overlay) {
-    // Show the overlay (it's visible by default)
-    overlay.style.display = 'flex';
-    
-    const closeBtn = document.getElementById('tutorialClose');
-    if(closeBtn) {
-      closeBtn.addEventListener('click', () => {
-        overlay.style.display = 'none';
-        localStorage.setItem('toadBattle_tutorialSeen', 'true');
-      });
-    }
-  } else if(overlay) {
-    // Hide if already seen
+  const hasSeenTutorial = localStorage.getItem('toadBattle_tutorialSeen');
+  
+  if(hasSeenTutorial) {
+    // Already seen - hide it
     overlay.style.display = 'none';
+  } else {
+    // First time - show it
+    overlay.style.display = 'flex';
+  }
+  
+  // Always attach the click handler
+  const closeBtn = document.getElementById('tutorialClose');
+  if(closeBtn) {
+    closeBtn.addEventListener('click', () => {
+      overlay.style.display = 'none';
+      localStorage.setItem('toadBattle_tutorialSeen', 'true');
+    });
   }
 }
   // initialization
