--- a/battle.html
+++ b/battle.html
@@ -1977,7 +1977,7 @@ function showCardActions(side, idx){
           setTimeout(() => {
             targetCardEl.classList.add('die');
             setTimeout(() => { 
-              addToDiscardPile(target.card, 'Computer');
+              addToDiscardPile(target.card, 'Computer', target);
               computerSlots[targetIdx] = null;
               renderAll(); 
               checkBattleOver(); 
@@ -2004,7 +2004,7 @@ function showCardActions(side, idx){
             setTimeout(() => {
               targetCardEl.classList.add('die');
               setTimeout(()=>{ 
-                addToDiscardPile(target.card, 'Computer');
+                addToDiscardPile(target.card, 'Computer', target);
                 computerSlots[targetIdx] = null; 
                 renderAll(); 
                 checkBattleOver(); 
@@ -2780,7 +2780,7 @@ function showCardActions(side, idx){
               if(cardEl) cardEl.classList.add('die');
               setTimeout(()=>{ 
                 // Add to discard pile with the correct owner
-                addToDiscardPile(slot.card, side === 'player' ? 'Computer' : 'Player');
+                addToDiscardPile(slot.card, side === 'player' ? 'Computer' : 'Player', slot);
                 slots[idx] = null; renderAll(); checkBattleOver(); },600);
             },400);
             return false; // remove effect (card dead)
